--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "keycloak-js": "^6.0.1",
+    "leaflet": "^1.5.1",
+    "leaflet-control-geocoder": "^1.7.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-leaflet": "^2.3.0",
+    "react-leaflet-locate-control": "^0.1.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
